--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
         }
     ],
     "require": {
-        "laravel/framework": "^6.0|^7.0"
+        "laravel/framework": "^9.0"
     },
     "require-dev": {
         "orchestra/testbench": "^5.0",
